
SVN
-------------------------------

All:   Resolved issue CASTOR-1634 using contribution from Edward Kuns [edward.kuns@aspect.com]
       Trivial checkstyle-based corrections
       Details: http://jira.codehaus.org/browse/CASTOR-1634
       (Edward - 20061016)

XML:   Resolved issue CASTOR-1631 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML schema type 'unsignedByte' to XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1631
       (Werner - 20061018)

XML:   Resolved issue CASTOR-1630 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML schema type 'unsignedShort' to XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1630
       (Werner - 20061017)

XML:   Resolved issue CASTOR-1629 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Added support for XML schema type 'unsignedInt' to XML code generator.
       Details: http://jira.codehaus.org/browse/CASTOR-1629
       (Werner - 20061017)

XML:   Resolved issue CASTOR-1600 using contribution from Werner Guttmann [werner.guttmann@gmx.net]
       Fixed problem with incorrect model group naming (and numbering) scheme.
       Details: http://jira.codehaus.org/browse/CASTOR-1600
       (Werner - 20061017)

XML:   Resolved issue CASTOR-1627 using contribution from Edward Kuns [edward.kuns@aspect.com]
       For directory trees, set the test suite name to the directory name.
       Details: http://jira.codehaus.org/browse/CASTOR-1627
       (Edward - 20061016)

XML:   Resolved issue CASTOR-1586 using contribution from Ralf Joachim [ralf.joachim@syscon-world.de]
       Fixed error loading mapping whem migrating from 1.0.1 to 1.0.3.
       Details: http://jira.codehaus.org/browse/CASTOR-1586
       (Ralf - 20061016)

XML:   Resolved issue CASTOR-1626 using contribution from Werner Guttmann [werner.guttmann@gmx.net]