@@ -70,6 +70,27 @@
                 </code>
            </summary>
             <bugs>
+                <bug id="1635" tool="jira">
+                    <description>
+		                Fixed problem with generation of incorrect validation code for 
+		                schema type 'gMonthDay'
+                    </description>
+                    <contributor>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </contributor>
+                    <submitter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </submitter>
+                    <reporter>
+                        <name>Werner Guttmann</name>
+                        <email>werner.guttmann@gmx.net</email>
+                    </reporter>
+                    <type>Bug</type>
+                    <module>XML</module>
+                    <date>20061018</date>
+                </bug>
                 <bug id="1634" tool="jira">
                     <description>
                         Trivial checkstyle-based corrections
